# gribscan

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  aec test.ipynb  build_diagrams.py  build_index.ipynb  build_multizarr.ipynb  ecenv  gribscan.py  gribscan_test.ipynb  magician.md  pyproject.toml  rechunk.ipynb  setup.py
.github/workflows/: python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  getting_started.md  index.md  index.rst  magician.md
gribscan/: __init__.py  aeccodec.py  gribscan.py  gridutils.py  magician.py  rawgribcodec.py  rotated_grid.py  tools.py
